# FactReview

./: .env.example  .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
RefCopilot/: README.md  pyproject.toml
RefCopilot/tests/: test_retrieval.py  (+1 more)
scripts/: execute_review_pipeline.py  execute_review_runtime_job.py  execute_stage_refcheck.py
src/: pipeline_full.py
tests/: test_e2e_pipeline.py  test_run_stats.py  test_schemas.py
tools/RefCopilot/: README.md  pyproject.toml
tools/RefCopilot/src/refcopilot/: cli.py  compat.py  factreview.py  merge.py  models.py  pipeline.py  report.py
tools/RefCopilot/src/refcopilot/extract/: llm_extractor.py
tools/RefCopilot/src/refcopilot/inputs/: bibtex.py  pdf.py  plain_text.py  url.py
tools/RefCopilot/src/refcopilot/llm/: client.py
tools/RefCopilot/src/refcopilot/search/: __init__.py  arxiv.py  semantic_scholar.py
tools/RefCopilot/src/refcopilot/verify/: hallucination.py  llm_verifier.py  text_match.py  thresholds.py
tools/RefCopilot/tests/: conftest.py
tools/RefCopilot/tests/fixtures/inputs/: incomplete.bib  outdated.bib
tools/RefCopilot/tests/test_a_inputs/: test_bibtex.py  test_detector.py  test_llm_extractor.py  test_pdf.py  test_url.py
tools/RefCopilot/tests/test_b_retrieval/: test_arxiv_backend.py  test_cache.py  test_merge.py  test_ratelimit.py  test_s2_backend.py
tools/RefCopilot/tests/test_c_verify/: test_e2e_schema_compat.py  test_factreview_schema.py  test_fake.py  test_incomplete.py  test_llm_verifier.py  test_non_academic.py  test_outdated.py  test_pipeline.py  test_pipeline_non_academic.py
(+142 files in other folders)
