[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "refcopilot"
version = "0.1.0"
description = "Reference checker — detects fake / outdated / incomplete citations in academic papers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "FactReview authors" }]

dependencies = [
  "pydantic>=2.5",
  "httpx>=0.27",
  "requests>=2.32",
  "pypdf>=4.0",
  "pdfplumber>=0.10",
  "pybtex>=0.25.1",
  "arxiv>=2.1.0",
  "beautifulsoup4>=4.12",
  "fuzzywuzzy>=0.18",
  "python-Levenshtein>=0.25",
  "tqdm>=4.67",
  "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.6",
]

[project.scripts]
refcopilot = "refcopilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/refcopilot"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md"]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003", "SIM102", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
markers = [
  "slow: long-running tests (>5s); deselect with '-m \"not slow\"'",
  "network: hits real arXiv / Semantic Scholar; skip in CI",
  "llm: hits real LLM (codex auth required); skip in CI",
]
